Closed
Bug 240611
Opened 21 years ago
Closed 21 years ago
silent mode has gtk errors from bug 57089
Categories
(SeaMonkey :: Installer, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: ajschult784, Assigned: ajschult784)
Details
(Keywords: fixed1.7, regression)
Attachments
(1 file)
|
942 bytes,
patch
|
dveditz
:
review+
dveditz
:
superreview+
dveditz
:
approval1.7+
|
Details | Diff | Splinter Review |
When doing the post-install part from bug 57089, the installer updates the GUI
text, even in silent mode. This results in lots of gtk assertions, but no
actual problems.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #146195 -
Flags: superreview?(dveditz+bmo)
Attachment #146195 -
Flags: review?(dveditz+bmo)
Comment 2•21 years ago
|
||
Comment on attachment 146195 [details] [diff] [review]
patch
r/sr=dveditz
a=dveditz for 1.7 branch since it's necessary for bug 57089 which already has
a=
Attachment #146195 -
Flags: superreview?(dveditz)
Attachment #146195 -
Flags: superreview+
Attachment #146195 -
Flags: review?(dveditz)
Attachment #146195 -
Flags: review+
Attachment #146195 -
Flags: approval1.7+
| Assignee | ||
Comment 3•21 years ago
|
||
checked in to trunk and branch by Neil
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•