Bug 240611 silent mode has gtk assertions p=ajschult@mindspring.com r/sr=dveditz